--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <title>{% block title %}Hlídač shopů{% endblock %}</title>
   <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://www.googletagmanager.com" rel="preconnect">
-  <link href="https://www.google-analytics.com" rel="preconnect">
-  <link href="https://www.google.com" rel="preconnect">
   <link href="https://stats.g.doubleclick.net" rel="preconnect">
-  <link href="https://ws8.hotjar.com" rel="preconnect">
-  <link href="https://in.hotjar.com" rel="preconnect">
-  <link href="https://script.hotjar.com" rel="preconnect">
-  <link href="https://static.hotjar.com" rel="preconnect">
-  <link href="https://vars.hotjar.com" rel="preconnect">
-  <link href="https://vc.hotjar.io" rel="preconnect">
+  <link href="https://www.google-analytics.com" rel="dns-prefetch">
+  <link href="https://in.hotjar.com" rel="dns-prefetch">
+  <link href="https://script.hotjar.com" rel="dns-prefetch">
+  <link href="https://static.hotjar.com" rel="dns-prefetch">
+  <link href="https://vars.hotjar.com" rel="dns-prefetch">
+  <link href="https://vc.hotjar.io" rel="dns-prefetch">
   {% block preload %}{% endblock %}
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
@@ -149,7 +148,7 @@
         </a>
       </div>
       <div
-        class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+        class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
             <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
@@ -304,19 +303,21 @@
             <li class="list_item"><a href="/media/">Média</a></li>
             <li class="list_item"><a href="https://blog.apify.com/black-friday-po-%C4%8Desku-kouzla-se-slevami-c7c0d2e7eeaa">Black Friday analýza 2017</a></li>
             <li class="list_item"><a href="https://blog.apify.com/black-friday-po%C4%8Desku-kouzla-se-slevami-po-roce-cf48de109ba">Black Friday analýza 2018</a></li>
+            <li class="list_item"><a href="https://github.com/topmonks/hlidac-shopu/issues">Připomínky k rozšíření</a></li>
+            <li class="list_item"><a href="mailto:info@hlidacshopu.cz">Kontakt</a></li>
           </ul>
         </nav>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-        <a href="https://apify.com/"><img src="/images/logos/apify_logo.svg" alt="Logo Apify" height="32"></a>
+        <a href="https://apify.com/" title="Přejít na stránky Apify"><img src="/images/logos/apify_logo.svg" alt="Logo Apify" height="32"></a>
         <p class="sub-info--grey">Scrapujeme data i z omítek</p>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-        <a href="https://www.keboola.com/"><img src="/images/logos/keboola_logo.svg" alt="Logo Keboola" height="32"></a>
+        <a href="https://www.keboola.com/" title="Přejít na stránky Keboola"><img src="/images/logos/keboola_logo.svg" alt="Logo Keboola" height="32"></a>
         <p class="sub-info--grey">DataOps &amp; Automation</p>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-        <a href="https://www.topmonks.cz/"><img src="/images/logos/topmonks_logo.svg" alt="Logo TopMonks" height="32"></a>
+        <a href="https://www.topmonks.cz/" title="Přejít na stránky TopMonks"><img src="/images/logos/topmonks_logo.svg" alt="Logo TopMonks" height="32"></a>
         <p class="sub-info--grey">Vyvíjíme software, stavíme startupty</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
