--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://www.googletagmanager.com" rel="preconnect">
-  <link href="https://stats.g.doubleclick.net" rel="preconnect">
+  <link href="https://stats.g.doubleclick.net" rel="dns-prefetch">
   <link href="https://www.google-analytics.com" rel="dns-prefetch">
   <link href="https://in.hotjar.com" rel="dns-prefetch">
   <link href="https://script.hotjar.com" rel="dns-prefetch">
