[www.hlidacshopu.cz] Typo

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -318,7 +318,7 @@
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
         <a href="https://www.topmonks.cz/" title="Přejít na stránky TopMonks"><img src="/images/logos/topmonks_logo.svg" alt="Logo TopMonks" height="32"></a>
-        <p class="sub-info--grey">Vyvíjíme software, stavíme startupty</p>
+        <p class="sub-info--grey">Vyvíjíme software, stavíme startupy</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <hr class="layout-wrapper">
