--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -37,12 +37,12 @@ header {
   padding-top: 16px;
   z-index: 10;
   --mdc-layout-grid-margin-desktop: 0 24px;
-  --mdc-layout-grid-margin-tablet: 0 16px;
+  --mdc-layout-grid-margin-tablet: 0;
   --mdc-layout-grid-margin-phone: 0;
 
   .hs_logo {
     display: flex;
-    @media screen and (min-width: 1032px){
+    @media screen and (min-width: 1032px) {
       transform: translate(-24px, 4px);
     }
   }
@@ -630,7 +630,7 @@ footer {
   &.app-bar--sticky {
     position: fixed;
     width: 100vw;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.07);
   }
 
   @media screen and (max-width: 839px) {
@@ -733,7 +733,7 @@ footer {
     width: 100vw;
     overflow: hidden;
     background-color: #fff;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.07);
     ul.menu__list {
       display: grid;
       padding-inline-start: 16px;
@@ -888,10 +888,11 @@ footer {
   }
 }
 
-.loader,.loader::after {
+.loader,
+.loader::after {
   border-radius: 50%;
   width: 32px;
-  height: 32px
+  height: 32px;
 }
 
 .loader {
@@ -899,19 +900,18 @@ footer {
   font-size: 10px;
   position: relative;
   text-indent: -9999em;
-  border: 4px solid rgba(255,255,255,0.8);
+  border: 4px solid rgba(255, 255, 255, 0.8);
   border-left-color: var(--red);
   transform: translateZ(0);
-  animation: load8 1.1s infinite linear
+  animation: load8 1.1s infinite linear;
 }
 
 @keyframes load8 {
   0% {
-    transform: rotate(0deg)
+    transform: rotate(0deg);
   }
 
   100% {
-    transform: rotate(360deg)
+    transform: rotate(360deg);
   }
 }
-
