[www.hlidacshopu.cz] Enable static assets caching

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -22,7 +22,7 @@
   <meta property="og:url" content="https://www.hlidacshopu.cz/">
   <meta property="og:image" content="https://www.hlidacshopu.cz/og-image.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900&amp;display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
   {% block styles %}{% endblock %}
 
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -309,15 +309,15 @@
         </nav>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-        <a href="https://apify.com/" title="Přejít na stránky Apify"><img src="/images/logos/apify_logo.svg" alt="Logo Apify" height="32"></a>
+        <a href="https://apify.com/" title="Přejít na stránky Apify"><img src="/assets/img/logos/apify_logo.svg" alt="Logo Apify" height="32"></a>
         <p class="sub-info--grey">Scrapujeme data i z omítek</p>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-        <a href="https://www.keboola.com/" title="Přejít na stránky Keboola"><img src="/images/logos/keboola_logo.svg" alt="Logo Keboola" height="32"></a>
+        <a href="https://www.keboola.com/" title="Přejít na stránky Keboola"><img src="/assets/img/logos/keboola_logo.svg" alt="Logo Keboola" height="32"></a>
         <p class="sub-info--grey">DataOps &amp; Automation</p>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-        <a href="https://www.topmonks.cz/" title="Přejít na stránky TopMonks"><img src="/images/logos/topmonks_logo.svg" alt="Logo TopMonks" height="32"></a>
+        <a href="https://www.topmonks.cz/" title="Přejít na stránky TopMonks"><img src="/assets/img/logos/topmonks_logo.svg" alt="Logo TopMonks" height="32"></a>
         <p class="sub-info--grey">Vyvíjíme software, stavíme startupy</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
