--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -256,7 +256,7 @@ section.purple-gradient {
 
 // Section: MAIN //
 .main {
-  background: url(/images/bg.svg) top center no-repeat;
+  background: url(/assets/img/bg.svg) top center no-repeat;
 
   .url-input {
     display: flex;
