--- a/www.hlidacshopu.cz/src/stylesheets/index.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/index.scss
@@ -201,18 +201,19 @@
   }
 }
 
-p.text--grey {
-  font-size: 13px;
-  line-height: 16px;
-}
-
-p.numbers {
-  font-size: 44px;
-  font-weight: 700;
-  color: black;
-  line-height: 54px;
-  text-align: center;
-  margin-top: 0;
+.numbers {
+  dt {
+    font-size: 13px;
+    line-height: 16px;
+  }
+  dd.number {
+    font-size: 44px;
+    font-weight: 700;
+    color: black;
+    line-height: 54px;
+    text-align: center;
+    margin: 0 0 0.5em;
+  }
 }
 
 .references {
