--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -63,9 +63,9 @@
       <div
         class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
         <div class="hamburger__container">
-          <div class="hamburger__bar"></div>
-          <div class="hamburger__bar"></div>
-          <div class="hamburger__bar"></div>
+          <div class="hamburger__bar" style="width: 50%; border-radius: 10px"></div>
+          <div class="hamburger__bar" style="border-radius: 10px"></div>
+          <div class="hamburger__bar" style="width: 45%; border-radius: 10px"></div>
         </div>
       </div>
       <div
