--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -349,6 +349,11 @@ footer {
       text-align: right;
     }
   }
+  @media screen and (max-width: 479px){
+    .logo-box, .sub-info--grey {
+      text-align: center;
+    }
+  }
 }
 
 // HAMBURGER //
@@ -407,15 +412,18 @@ footer {
     background-color: var(--purple);
     width: 20px;
     height: 2px;
+    border-radius: 10px;
     position: absolute;
     top: 16px;
     transition: transform 0.4s;
 
     &:first-of-type {
+      width: 50%;
       transform: translateY(-6px);
     }
 
     &:last-of-type {
+      width: 40%;
       transform: translateY(6px);
     }
   }
