--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -21,7 +21,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.hlidacshopu.cz/">
   <meta property="og:image" content="https://www.hlidacshopu.cz/og-image.png">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900&amp;subset=latin-ext&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
   {% block styles %}{% endblock %}
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
