--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -55,6 +55,7 @@ header {
       transform: translate(-24px, 4px);
     }
   }
+
   li a {
     color: black;
 
@@ -261,6 +262,12 @@ footer {
       line-height: 26px;
       text-decoration: none;
       list-style: none;
+      @media screen and (max-width: 479px) {
+        margin: 0.6428em 0;
+        a {
+          padding: 0.5em 0;
+        }
+      }
     }
   }
 
@@ -310,8 +317,10 @@ footer {
       text-align: right;
     }
   }
-  @media screen and (max-width: 479px){
-    .logo-box, .sub-info--grey {
+
+  @media screen and (max-width: 479px) {
+    .logo-box,
+    .sub-info--grey {
       text-align: center;
     }
   }
@@ -507,8 +516,10 @@ footer {
       font-size: 1.6em;
       text-decoration: none;
     }
+
     &:hover {
       border-color: var(--dark-purple);
+
       a {
         color: var(--dark-purple) !important;
       }
