[www.hlidacshopu.cz] Release dashboard to the masses

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -150,9 +150,10 @@
         class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
-            <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
-            <li class="list_item"><a href="/proc-to-delame/">PROČ TO DĚLÁME</a></li>
-            <li class="list_item"><a href="/media/">MÉDIA</a></li>
+            <li class="list_item"><a href="/">Ověřit vývoj ceny</a></li>
+            <li class="list_item"><a href="/proc-to-delame/">Proč to děláme</a></li>
+            <li class="list_item"><a href="/media/">Napsali o nás</a></li>
+            <li class="list_item"><a href="/dashboard/">Naše data</a></li>
           </ul>
         </nav>
       </div>
@@ -299,7 +300,8 @@
           <ul>
             <li class="list_item"><a href="/">Ověřit vývoj ceny</a></li>
             <li class="list_item"><a href="/proc-to-delame/">Proč to děláme</a></li>
-            <li class="list_item"><a href="/media/">Média</a></li>
+            <li class="list_item"><a href="/media/">Napsali o nás</a></li>
+            <li class="list_item"><a href="/dashboard/">Naše data</a></li>
             <li class="list_item"><a href="https://blog.apify.com/black-friday-po-%C4%8Desku-kouzla-se-slevami-c7c0d2e7eeaa">Black Friday analýza 2017</a></li>
             <li class="list_item"><a href="https://blog.apify.com/black-friday-po%C4%8Desku-kouzla-se-slevami-po-roce-cf48de109ba">Black Friday analýza 2018</a></li>
             <li class="list_item"><a href="https://github.com/topmonks/hlidac-shopu/issues">Připomínky k rozšíření</a></li>
