[www.hlidacshopu.cz] Added real discount explanation to dashboard

--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -120,6 +120,10 @@ p {
   line-height: 28px;
 }
 
+p.explanation {
+  font-size: 0.75em;
+}
+
 hr {
   background-color: #ebeef2;
   border: 1px solid #ebeef2;
