[www.hlidacshopu.cz] Added Twitter Card support

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -18,9 +18,13 @@
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="description" content="Přes hlídač shopů nakoupíte za nejlepší cenu.">
+  <meta name="twitter:description" property="og:description" content="Přes hlídač shopů nakoupíte za nejlepší cenu.">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@hlidacshopucz">
+  <meta name="twitter:title" content="Hlídač shopů">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.hlidacshopu.cz/">
-  <meta property="og:image" content="https://www.hlidacshopu.cz/og-image.png">
+  <meta name="twitter:image" property="og:image" content="https://www.hlidacshopu.cz/og-image.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900&amp;subset=latin-ext&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
   {% block styles %}{% endblock %}
