--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -5,6 +5,7 @@
   <title>{% block title %}Hlídač shopů{% endblock %}</title>
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect">
+  <link href="https://res.cloudinary.com" rel="preconnect">
   <link href="https://www.googletagmanager.com" rel="preconnect">
   <link href="https://stats.g.doubleclick.net" rel="dns-prefetch">
   <link href="https://www.google-analytics.com" rel="dns-prefetch">
