[www.hlidacshopu.cz] Changed Apify claim

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -316,7 +316,7 @@
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
         <a href="https://apify.com/" title="Přejít na stránky Apify"><img src="/assets/img/logos/apify_logo.svg" alt="Logo Apify" height="32"></a>
-        <p class="sub-info--grey">Scrapujeme data i z omítek</p>
+        <p class="sub-info--grey">Otevíráme data z webu</p>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
         <a href="https://www.keboola.com/" title="Přejít na stránky Keboola"><img src="/assets/img/logos/keboola_logo.svg" alt="Logo Keboola" height="32"></a>
