--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -18,8 +18,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <meta name="description" content="Přes hlídač shopů nakoupíte za nejlepší cenu.">
-  <meta name="twitter:description" property="og:description" content="Přes hlídač shopů nakoupíte za nejlepší cenu.">
+  <meta name="description" content="Ujistěte se, že nakupujete opravdu se slevou">
+  <meta name="twitter:description" property="og:description" content="Ujistěte se, že nakupujete opravdu se slevou">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@hlidacshopucz">
   <meta name="twitter:title" content="Hlídač shopů">
