--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -8,13 +8,14 @@
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://res.cloudinary.com" rel="preconnect">
   <link href="https://www.googletagmanager.com" rel="preconnect">
-  <link href="https://stats.g.doubleclick.net" rel="dns-prefetch">
-  <link href="https://www.google-analytics.com" rel="dns-prefetch">
-  <link href="https://in.hotjar.com" rel="dns-prefetch">
-  <link href="https://script.hotjar.com" rel="dns-prefetch">
-  <link href="https://static.hotjar.com" rel="dns-prefetch">
-  <link href="https://vars.hotjar.com" rel="dns-prefetch">
-  <link href="https://vc.hotjar.io" rel="dns-prefetch">
+  <link href="https://stats.g.doubleclick.net" rel="preconnect">
+  <link href="https://www.google-analytics.com" rel="preconnect">
+  <link href="https://in.hotjar.com" rel="preconnect">
+  <link href="https://script.hotjar.com" rel="preconnect">
+  <link href="https://static.hotjar.com" rel="preconnect">
+  <link href="https://vars.hotjar.com" rel="preconnect">
+  <link href="https://www.google.com" rel="preconnect">
+  <link href="https://www.google.cz" rel="preconnect">
   {% block preload %}{% endblock %}
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
