Caffe topmonks - nav bar

--- a/caffe.topmonks.cz/src/stylesheets/header.scss
+++ b/caffe.topmonks.cz/src/stylesheets/header.scss
@@ -154,8 +154,8 @@
       border-bottom: 1px solid transparent;
     }
     a:hover {
-      color: #F64060;
-      border-bottom: 1px solid #F64060;
+      padding-bottom: 14px;
+      border-bottom: 1px solid white;
     }
   }
   @media screen and (max-width: 839px) {
