[www.hlidacshopu.cz] Remove link to dashboard and add notice about wrong numbers

--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -160,7 +160,7 @@
             <li class="list_item"><a href="/">Ověřit vývoj ceny</a></li>
             <li class="list_item"><a href="/proc-to-delame/">Proč to děláme</a></li>
             <li class="list_item"><a href="/media/">Napsali o nás</a></li>
-            <li class="list_item"><a href="/dashboard/">Naše data</a></li>
+            <!--li class="list_item"><a href="/dashboard/">Naše data</a></li-->
           </ul>
         </nav>
       </div>
@@ -308,7 +308,7 @@
             <li class="list_item"><a href="/">Ověřit vývoj ceny</a></li>
             <li class="list_item"><a href="/proc-to-delame/">Proč to děláme</a></li>
             <li class="list_item"><a href="/media/">Napsali o nás</a></li>
-            <li class="list_item"><a href="/dashboard/">Naše data</a></li>
+            <!--li class="list_item"><a href="/dashboard/">Naše data</a></li-->
             <li class="list_item"><a href="https://blog.apify.com/black-friday-po-%C4%8Desku-kouzla-se-slevami-c7c0d2e7eeaa">Black Friday analýza 2017</a></li>
             <li class="list_item"><a href="https://blog.apify.com/black-friday-po%C4%8Desku-kouzla-se-slevami-po-roce-cf48de109ba">Black Friday analýza 2018</a></li>
             <li class="list_item"><a href="https://github.com/topmonks/hlidac-shopu/issues">Připomínky k rozšíření</a></li>
