--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -68,8 +68,9 @@
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div
-        class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
+        class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-9-desktop">
         <div class="hamburger__container">
+          <div class="hamburger__bar"></div>
           <div class="hamburger__bar"></div>
           <div class="hamburger__bar"></div>
           <div class="hamburger__bar"></div>
