[www.hlidacshopu.cz] Added label for URL input

--- a/www.hlidacshopu.cz/src/stylesheets/index.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/index.scss
@@ -12,6 +12,9 @@
     margin: 1em auto;
     text-align: center;
   }
+  label {
+    font-weight: 500;
+  }
 
   button {
     font-family: inherit;
