--- a/www.hlidacshopu.cz/src/stylesheets/index.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/index.scss
@@ -55,12 +55,13 @@
     }
 
     input {
+      -webkit-appearance: none;
+      font-family: inherit;
       font-size: 14px;
       line-height: 54px;
       color: #676767;
-      font-family: inherit;
       padding: 0 1em;
-      -webkit-appearance: none;
+      margin: 0;
       border: none;
       background: none;
       flex-grow: 2;
