--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -115,6 +115,9 @@ h3 {
 }
 
 p {
+  font-family: "Open Sans", sans-serif;
+  font-kerning: normal;
+  font-weight: 300;
   font-size: 18px;
   color: var(--grey);
   line-height: 28px;
@@ -140,7 +143,7 @@ hr {
   }
 
   p {
-    font-size: 14px;
+    font-size: 16px;
     color: var(--grey);
     text-align: left;
   }
