--- a/www.hlidacshopu.cz/src/html/layouts/master.html
+++ b/www.hlidacshopu.cz/src/html/layouts/master.html
@@ -29,6 +29,7 @@
   <meta property="og:url" content="https://www.hlidacshopu.cz/">
   <meta name="twitter:image" property="og:image" content="https://www.hlidacshopu.cz/og-image.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900&amp;subset=latin-ext&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,600i&amp;display=swap&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
   {% block styles %}{% endblock %}
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
