[www.hlidacshopu.cz] Typography

--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -117,10 +117,8 @@ h3 {
 p {
   font-family: "Open Sans", sans-serif;
   font-kerning: normal;
-  font-weight: 300;
-  font-size: 18px;
   color: var(--grey);
-  line-height: 28px;
+  line-height: 1.75;
 }
 
 p.explanation {
