--- a/www.hlidacshopu.cz/src/stylesheets/index.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/index.scss
@@ -13,13 +13,15 @@
     text-align: center;
   }
   label {
-    font-weight: 500;
+    font-weight: 600;
   }
 
   button {
     font-family: inherit;
     font-size: 15px;
     line-height: 18px;
+    font-weight: 600;
+    text-transform: uppercase;
     color: #ffffff;
     width: 200px;
     height: 54px;
