--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -157,7 +157,6 @@ hr {
   p {
     font-size: 16px;
     color: var(--grey);
-    text-align: left;
   }
   .icon svg {
     height: 100%;
@@ -173,13 +172,14 @@ img.responsive {
 
   a {
     font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
+    text-transform: uppercase;
     color: #ffffff;
     background-color: var(--purple);
     box-shadow: 0 20px 20px rgba(92, 98, 205, 0.1);
     padding: 14px 48px;
-    text-transform: uppercase;
     border-radius: 8px;
-    text-decoration: none;
 
     &:hover {
       background-color: var(--dark-purple);
